<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.reallifedeveloper</groupId>
        <artifactId>rld-parent</artifactId>
        <version>15</version>
    </parent>

    <artifactId>jdepend</artifactId>
    <version>3.0.0-SNAPSHOT</version>

    <name>JDepend</name>
    <description>A Java package dependency analyzer that generates design quality metrics.</description>

    <properties>
        <java.version>17</java.version>
        <rld-build-tools.version>2.0.27</rld-build-tools.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>com.reallifedeveloper</groupId>
            <artifactId>rld-build-tools</artifactId>
            <version>${rld-build-tools.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.reallifedeveloper</groupId>
            <artifactId>rld-build-tools</artifactId>
            <version>${rld-build-tools.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.13</version>
                <configuration>
                    <includes>
                        <include>jdepend/**/*</include>
                    </includes>
                    <propertyName>jacoco.agent.argLine</propertyName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>com.reallifedeveloper</groupId>
                        <artifactId>rld-build-tools</artifactId>
                        <version>${rld-build-tools.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>com.reallifedeveloper</groupId>
                        <artifactId>rld-build-tools</artifactId>
                        <version>${rld-build-tools.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>com.reallifedeveloper</groupId>
                        <artifactId>rld-build-tools</artifactId>
                        <version>${rld-build-tools.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <!-- Unpacks XML files from the rld-build-tools project to the target directory. -->
                <!-- This is necessary since the OWASP dependency-check-maven plugin can only read files, -->
                <!-- not resources in classpath. -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.reallifedeveloper</groupId>
                                    <artifactId>rld-build-tools</artifactId>
                                    <overWrite>true</overWrite>
                                    <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                                    <includes>**/*.xml</includes>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>